# kuro

./: .gitignore  Cargo.toml  FEATURES.md  README.md
.cargo/: config.toml
src/: cli.rs  config.rs  main.rs
src/config/: internal.rs  mod.rs  v1.rs
test-assets/: kuro-test.toml
tests/fixtures/: kuro-test.toml  kuro.toml
tests/fixtures/config-v1/: kuro.toml
