[package]
name = "kuro"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0"
description = "A cross-platform dotfiles/configuration management tool"
homepage = "https://github.com/KevinSilvester/kuro"
repository = "https://github.com/KevinSilvester/kuro"
readme = "README.md"
categories = ["utilities", "system"]
keywords = ["dotfiles", "configuration", "management", "cross-platform"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
git2 = "0.20.2"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
toml = "0.9.7"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }

[profile.release]
opt-level = 3
debug = false
# lto = "fat"
codegen-units = 8
