[package]
name = "kuro"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A cross-platform dotfiles/configuration management tool"
homepage = "https://github.com/KevinSilvester/kuro"
repository = "https://github.com/KevinSilvester/kuro"
readme = "README.md"
categories = ["utilities", "system"]
keywords = ["dotfiles", "configuration", "management", "cross-platform"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "env"] }
dirs = "6.0.0"
gix = { version = "0.73.0", features = [
   "blocking-http-transport-reqwest-rust-tls",
] }
glob = "0.3.3"
indexmap = { version = "2.11.4", features = ["serde"] }
# miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.12.23", default-features = false, features = [
   "blocking",
   "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
# thiserror = "2.0.17"
toml = "0.9.7"
url = { version = "2.5.7", features = ["serde"] }

[profile.release]
strip = true
opt-level = 3
debug = false
lto = "thin"
codegen-units = 8
